# vail

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  SECURITY.md  build.sh  docker-compose.yaml  implementation_plan.md.resolved
vail-rs/: Cargo.toml  Dockerfile  config.docker.toml  config.example.toml
vail-rs/migrations/: 0001_init_schema.sql  0002_asset_identity_and_grants.sql  0002_partition_login_log.sql  0003_partition_operator_log.sql  0003_terminal_themes.sql  0004_auth_jit_weekly_partitions.sql  0004_terminal_fonts.sql  0005_iam_resource_permission.sql  0005_operator_log_hardening.sql  0006_seed_admin_iam_bindings.sql  0006_terminal_emulation_type.sql  0007_seed_admin_user.sql  0007_session_metadata.sql  0008_asset_data_grant_permissions.sql  0008_seed_host_permissions.sql  0009_backfill_admin_host_permissions.sql  0009_terminal_access_ticket.sql  0010_integrity_constraints.sql  0011_ssh_key_resources.sql  0012_dict_and_system_message.sql
vail-rs/scripts/: generate_jwt_ed25519_keypair.sh  test_themes.sh  verify_themes.sql
vail-rs/src/: config.rs  error.rs  lib.rs  main.rs  security.rs  ssh_client.rs
vail-rs/src/api/: auth.rs  guard.rs  host.rs  iam.rs  jit.rs  mod.rs  orion.rs  sftp.rs  ssh.rs  ssh_key.rs  terminal.rs  web.rs
vail-rs/src/db/: migrate.rs  mod.rs
vail-rs/src/infrastructure/: mod.rs
vail-rs/src/model/: mod.rs
vail-rs/web-dist/: index.html  manifest.webmanifest  sw.js  workbox-94569296.js
vail-rs/web-dist/assets/: alarm-event-table-base.3b7e3915.css  alarm-event-table-base.926cdf92.js  arco.412b1a6f.js  arcoExt.e490a35d.js  (+159 more)
(+413 files in other folders)
